contrib/demos-unmaintained/demo/prototype2-script/ingress-kuard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
spec:
  rules:
    - host: kuard.kcp-apps.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 8080
